# ProjectBinaryClassification

./: Heart_prediction-2.ipynb  README.md  requirements.txt
heart_mlops/: Makefile  README.md  dvc.yaml  environment.yml  params.yaml  pyproject.toml  requirements.txt
heart_mlops/artifacts/: metrics.json  model.joblib
heart_mlops/scripts/: visualize.py
heart_mlops/src/heart_pred/: data.py  preprocessing.py  train.py
heart_mlops/tests/: test_preprocessing.py
heart_project_full/: Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements-dev.txt  setup.cfg
heart_project_full/notebooks/: Heart_prediction.ipynb
heart_project_full/scripts/: preprocess.py
heart_project_full/src/heart_pred/: data_preprocessing.py  model.py
scripts/: evaluate.py  train.py
src/heart_pred/: utils.py
tests/: test_preprocessing.py
