[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-pred"
version = "0.1.0"
description = "Heart disease prediction: reproducible ML pipeline"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Dmitry Tyulyaev" }]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
per-file-ignores = [
  "tests/*: D",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
